--- a/docs/nba-cba-2017.tex
+++ b/docs/nba-cba-2017.tex
@@ -107,7 +107,7 @@
 
 \title{NBA Collective Bargaining Agreement - 2017}
 \author{Robert}
-\date{2023-04-01}
+\date{2023-07-11}
 
 \begin{document}
 \maketitle
@@ -4083,6 +4083,141 @@ Any ETO must be exercised prior to the June 30 immediately prior to the Effectiv
 
 The NBA shall provide the Players Association with copies of any Option or ETO exercise or non-exercise notice received by the NBA within two (2) business days of the NBA's receipt of such notice from the Team.
 
+\hypertarget{circumvention}{%
+\chapter{CIRCUMVENTION}\label{circumvention}}
+
+\hypertarget{general-prohibitions.}{%
+\section{General Prohibitions.}\label{general-prohibitions.}}
+
+\begin{enumerate}
+\def\labelenumi{(\alph{enumi})}
+\tightlist
+\item
+  It is the intention of the parties that the provisions agreed to herein, including, without limitation, those relating to the Salary Cap, the Exceptions to the Salary Cap, the scope of Basketball Related Income, the Escrow and Tax Arrangement, the Rookie Scale, the Right of First Refusal, the Maximum Player Salary, and free agency, be interpreted so as to preserve the essential benefits achieved by both parties to this Agreement. Neither the Players Association, the NBA, nor any Team (or Team Affiliate) or player (or person or entity acting with authority on behalf of such player), shall enter into any agreement, including, without limitation, any Player Contract (including any Renegotiation, Extension, or amendment of a Player Contract), or undertake any action or transaction, including, without limitation, the assignment or termination of a Player Contract, which is, or which includes any term that is, designed to serve the purpose of defeating or circumventing the intention of the parties as reflected by all of the provisions of this Agreement.
+\item
+  It shall constitute a violation of Section 1(a) above for a Team (or Team Affiliate) to enter into an agreement or understanding with any sponsor or business partner or third party under which such sponsor, business partner, or third party pays or agrees to pay compensation for basketball services (even if such compensation is ostensibly designated as being for non-basketball services) to a player under Contract to the Team. Such an agreement with a sponsor or business partner or third party may be inferred where: (i) such compensation from the sponsor or business partner or third party is substantially in excess of the fair market value of any services to be rendered by the player for such sponsor or business partner or third party; and (ii) the Compensation in the Player Contract between the player and the Team is substantially below the fair market value of such Contract.
+\item
+  It shall constitute a violation of Section 1(a) above for a Team (or Team Affiliate) to have a financial arrangement with or offer a financial inducement to any player (not including retired players) not signed to a current Player Contract, except as permitted by this Agreement.
+\item
+  Nothing contained in Section 1(c) above shall interfere with a Team's obligation to pay a player Deferred Compensation earned under a prior Player Contract.
+\end{enumerate}
+
+\hypertarget{no-unauthorized-agreements.}{%
+\section{No Unauthorized Agreements.}\label{no-unauthorized-agreements.}}
+
+\begin{enumerate}
+\def\labelenumi{(\alph{enumi})}
+\tightlist
+\item
+  At no time shall there be any agreements or transactions of any kind (whether disclosed or undisclosed to the NBA), express or implied, oral or written, or promises, undertakings, representations, commitments, inducements, assurances of intent, or understandings of any kind (whether disclosed or undisclosed to the NBA), between a player (or any person or entity controlled by, related to, or acting with authority on behalf of, such player) and any Team (or Team Affiliate):
+
+  \begin{enumerate}
+  \def\labelenumii{(\roman{enumii})}
+  \tightlist
+  \item
+    concerning any future Renegotiation, Extension, or other amendment of an existing Player Contract, or entry into a new Player Contract; or
+  \item
+    except as permitted by this Agreement or as set forth in a Uniform Player Contract (provided that the Team has not intentionally delayed submitting such Uniform Player Contract for approval by the NBA), involving compensation or consideration of any kind or anything else of value, to be paid, furnished, or made available by, to, or for the benefit of the player, or any person or entity controlled by, related to, or acting with authority on behalf of the player; or
+  \item
+    except as permitted by this Agreement, involving an investment or business opportunity to be furnished or made available by, to, or for the benefit of the player, or any person or entity controlled by, related to, or acting with authority on behalf of the player.
+  \end{enumerate}
+\item
+  In addition to the foregoing, it shall be a violation of this Section 2 for any Team (or Team Affiliate) or any player (or any person or entity controlled by, related to, or acting with authority on behalf of, such player) to attempt to enter into or to intentionally solicit any agreement, transaction, promise, undertaking, representation, commitment, inducement, assurance of intent, or understanding that would be prohibited by Section 2(a) above.
+\item
+  Notwithstanding the foregoing, it shall not be a violation of Section 2(a) or 2(b) above solely for a Team Affiliate and a player (or any person or entity controlled by, related to, or acting with authority on behalf of, such player) to each passively invest (i.e., invest with no management, governance, voting, or executive role or other operational rights or role) in the same third-party entity, provided that (i) neither such Team Affiliate or such player holds more than a twelve and one-half percent (12.5\%) interest in such third-party entity, (ii) the Team Affiliate's investment and player's investment are not made in coordination or in consultation with each other, and (iii) the investment opportunity was not furnished or made available to the player by the Team Affiliate (or vice versa).
+\item
+  A violation of Section 2(a) or 2(b) above may be proven by direct or circumstantial evidence, including, but not limited to, evidence that a Player Contract or any term or provision thereof cannot rationally be explained in the absence of conduct violative of Section 2(a) or 2(b).
+\item
+  In any proceeding brought before the System Arbitrator pursuant to this Section 2, no adverse inference shall be drawn against the party initiating such proceeding because that party, when it first suspected or believed that a violation of Section 2 may have occurred, deferred the initiation of such proceeding until it had further reason to believe that such a violation had occurred.
+\item
+  A player will not be found to have committed a violation of Section 2(a)(ii) above if the violation is the Team's intentional delay in submitting a Uniform Player Contract to the NBA and this was done without the player's knowledge.
+\end{enumerate}
+
+\hypertarget{penalties.}{%
+\section{Penalties.}\label{penalties.}}
+
+\begin{enumerate}
+\def\labelenumi{(\alph{enumi})}
+\tightlist
+\item
+  Upon a finding of a violation of Section 1 above by the System Arbitrator, but only following the conclusion of any appeal to the Appeals Panel, the Commissioner shall be authorized to:
+
+  \begin{enumerate}
+  \def\labelenumii{(\roman{enumii})}
+  \tightlist
+  \item
+    impose a fine of up to \$4,500,000 (fifty percent (50\%) of which shall be payable to the NBA, and fifty percent (50\%) of which shall be payable to the NBPA-Selected Charitable Organization (as defined in Article VI, Section 6(a))) on any Team found to have committed such violation for the first time;
+  \item
+    impose a fine of up to \$5,500,000 (fifty percent (50\%) of which shall be payable to the NBA, and fifty percent (50\%) of which shall be payable to the NBPA-Selected Charitable Organization) on any Team found to have committed such violation for at least the second time;
+  \item
+    direct the forfeiture of one First Round Draft Pick;
+  \item
+    void any Player Contract, or any Renegotiation, Extension, or amendment of a Player Contract, between any player and any Team when both the player (or any person or entity acting with authority on behalf of such player) and the Team (or Team Affiliate) are found to have committed such violation; and/or
+  \item
+    void any other transaction or agreement found to have violated Section 1 above.
+  \end{enumerate}
+\item
+  Upon a finding of a violation of Section 2 above by the System Arbitrator, but only following the conclusion of any appeal to the Appeals Panel, the Commissioner shall be authorized to:
+
+  \begin{enumerate}
+  \def\labelenumii{(\roman{enumii})}
+  \tightlist
+  \item
+    impose a fine of up to \$7,500,000 on any Team found to have committed such violation (fifty percent (50\%) of which shall be payable to the NBA, and fifty percent (50\%) of which shall be payable to the NBPA-Selected Charitable Organization);
+  \item
+    direct the forfeiture of draft picks;
+  \item
+    when both the player (or any person or entity acting with authority on behalf of such player) and the Team (or Team Affiliate) are found to have committed such violation, (A) void any Player Contract, or any Renegotiation, Extension, or amendment of a Player Contract, between such player and such Team, (B) impose a fine of up to \$350,000, on any player (fifty percent (50\%) of which shall be payable to the NBA, and fifty percent (50\%) of which shall be payable to the NBPA-Selected Charitable Organization), and/or (C) prohibit any future Player Contract, or any Renegotiation, Extension, or amendment of a Player Contract, between such player and such Team;
+  \item
+    suspend for up to one (1) year any Team personnel found to have willfully engaged in such violation; and/or
+  \item
+    void any transaction or agreement found to have violated Section 2 above and direct the disgorgement by the player of anything of value received in connection with such transaction or agreement (except Compensation received for services already performed pursuant to a Player Contract), unless the player establishes by a preponderance of the evidence that he was unaware of the violation.
+  \end{enumerate}
+\item
+  In any proceeding before the System Arbitrator in which it is alleged that a player agent or other person or entity acting with authority on behalf of a player has violated Section 2 above, the System Arbitrator shall make a specific determination with respect to such allegation. If the System Arbitrator finds such violation and such finding, if appealed, is affirmed by the Appeals Panel, the System Arbitrator shall refer such finding to the Players Association, which shall accept as binding and conclusive the finding(s) of the System Arbitrator (or, in the case of an appeal, the Appeals Panel) that a violation of Section 2(a) or 2(b) has occurred and shall consider such finding(s) as establishing a violation of the Players Association's regulations applicable to such person or entity. The Players Association represents that it will impose such discipline as is appropriate under the circumstances on the person or entity found to have violated Section 2 above, and that it will promptly notify the NBA of the discipline imposed; provided, however, that in no event shall the penalty imposed upon a player agent found to have violated Section 2 above be less than a one-year suspension of that player agent's certification by the Players Association.
+\item
+  In addition to the authority conferred on the Commissioner pursuant to Sections 3(a) and 3(b) above, the Commissioner shall be authorized to impose a fine of up to \$1,000,000 on any Team or Team personnel found by the Commissioner to have violated Section 2 above. Any fine imposed pursuant to this Section 3(d) shall not require as a predicate any finding of, or proceeding before, the System Arbitrator. In the event the Commissioner imposes such a fine, the Players Association has the right to de novo review of the Commissioner's finding that a Section 2 violation occurred under the System Arbitration provisions of Article XXXII. With respect to any fine imposed under this Section 3(d), fifty percent (50\%) shall be payable to the NBA and fifty percent (50\%) shall be payable to the NBPA-Selected Charitable Organization (as defined in Article VI, Section 6(a)).
+\end{enumerate}
+
+\hypertarget{production-of-tax-materials.}{%
+\section{Production of Tax Materials.}\label{production-of-tax-materials.}}
+
+In any proceeding to enforce Section 1 or 2 above, the System Arbitrator shall have the authority, upon good cause shown, to direct any Team, Team Affiliate, or player to produce any tax returns or other relevant tax materials disclosing income figures for the player (non-income figures may be redacted), or disclosing expense figures by the Team or Team Affiliate (non-expense figures may be redacted), which materials shall not be released to the general public or the media and shall be treated as strictly confidential by all parties.
+
+\hypertarget{transactions-with-retired-players.}{%
+\section{Transactions with Retired Players.}\label{transactions-with-retired-players.}}
+
+\begin{enumerate}
+\def\labelenumi{(\alph{enumi})}
+\item
+  If (i) a Team or Team Affiliate enters into a transaction after the date of this Agreement with a retired player who played for the Team within the five-year (5) period preceding such transaction and the terms of such transaction provide for the retired player to be paid compensation or consideration in excess of \$10,000 or to be provided with an investment or business opportunity, and, if (ii) the compensation the retired player received from the Team when he was a player was substantially below the then fair market value of such player's basketball services under the Salary Cap system, then the NBA may challenge the transaction, pursuant to the procedures set forth in Section 5(b) below, on the ground that: (A) the compensation or consideration to the retired player substantially exceeds the then fair market value of the services or other consideration provided by the retired player in the transaction; or that (B) the amount of the retired player's investment or the benefit conferred upon the retired player as a result of the investment or business opportunity is not commercially reasonable, given the relative risks and rewards of such investment.
+\item
+  \begin{enumerate}
+  \def\labelenumii{(\roman{enumii})}
+  \tightlist
+  \item
+    Any challenge under this Section 5 shall be filed in writing with a business valuation expert jointly selected by the NBA and the Players Association. In the event the parties cannot agree on the identity of a business valuation expert, a business valuation expert shall be selected in the same manner set forth in Article XXXI, Section 7 for the selection of a Grievance Arbitrator in the absence of an agreement between the parties. The business valuation expert shall conduct a hearing in which the retired player, the Team and/or Team Affiliate, the Players Association, and the NBA are afforded the opportunity to appear and participate. The NBA shall have the burden of proof in the proceeding. The business valuation expert may permit discovery of relevant documents necessary to undertake the valuation, and shall render a decision within fifteen (15) days following the conclusion of the hearing. Within ten (10) days of any decision by the business valuation expert, any of the parties may file an appeal with the System Arbitrator, who shall conduct a hearing and render a decision within twenty (20) days of the filing of the appeal. In any such proceeding, the System Arbitrator shall apply an ``arbitrary and capricious'' standard of review. There shall be no right of further appeal to the Appeals Panel.
+  \item
+    If the NBA prevails in its challenge under this Section 5, the difference between (A) the compensation or consideration received by the retired player, or the value of the investment or business opportunity received by the retired player (net of any contribution by the retired player), and (B) a reasonable estimate of the fair market value of the services or other consideration provided by the retired player, or a reasonable estimate of the fair market value of the investment or business opportunity, in each case as determined by the business valuation expert or the System Arbitrator, as the case may be, shall be included in the Team's Team Salary, subject to the Team's Room and other Salary Cap rules, and further subject to any allocation over time that the business valuation expert or System Arbitrator determines is appropriate. In the event that any amount required to be included in the Team's Team Salary pursuant to this subsection exceeds the Team's Room, the challenged transaction or arrangement shall be rescinded and of no further force and effect.
+  \item
+    If the NBA prevails in its challenge under this Section 5, and the retired player and the Team and/or Team Affiliate renegotiate or terminate the transaction, any revised terms of the transaction shall be promptly disclosed to the NBA and the Players Association, and may, at the request of the NBA, be re-subjected to the procedures of this Section 5(b).
+  \end{enumerate}
+\item
+  Any information disclosed to the NBA and the Players Association pursuant to the procedures of this Section 5 shall be treated strictly confidential, and shall not be released to the general public or the media.
+\end{enumerate}
+
+\hypertarget{charitable-contributions.-1}{%
+\section{Charitable Contributions.}\label{charitable-contributions.-1}}
+
+\begin{enumerate}
+\def\labelenumi{(\alph{enumi})}
+\tightlist
+\item
+  Notwithstanding any other provision in this Article XIII, a Team is permitted to make charitable contributions in respect of players on the Team so long as the combined value of all donations by a Team in respect of any one player on the Team does not exceed \$20,000 per Salary Cap Year, and the combined value of all donations in respect of all players on the Team does not exceed \$75,000 per Salary Cap Year. For purposes of this Section 6, a donation in respect of a player means a donation to a bona fide charity that qualifies as a tax exempt organization under the Internal Revenue Code and is either (i) a player's own charitable foundation or another charity with which the player is affiliated, or (ii) a charity to which a Team makes a donation on behalf of, or at the request of, a player or for the purpose of demonstrating support for a player.
+\item
+  The combined value of all charitable donations by a player to any Team-related charity may not exceed \$20,000 per Salary Cap Year. For purposes of this Section 6, a ``Team-related charity'' means a bona fide charity that qualifies as a tax exempt organization under the Internal Revenue Code and is either (i) the charitable foundation of the player's Team or other charity with which the Team or a Team Affiliate is affiliated, or (ii) a charity to which a player makes a donation on behalf of, or at the request of, his Team or a Team Affiliate or for the purpose of demonstrating support for the Team or Team Affiliate.
+\end{enumerate}
+
 \hypertarget{anti-collusion-provisions}{%
 \chapter{ANTI-COLLUSION PROVISIONS}\label{anti-collusion-provisions}}
 
@@ -7512,7 +7647,8 @@ Player & Team \\
 
 \newpage
 
-\#\#\#Exhibit 9 --- One-Season, Non-Guaranteed Training Camp Contracts
+\hypertarget{exhibit-9-one-season-non-guaranteed-training-camp-contracts}{%
+\subsection{Exhibit 9 --- One-Season, Non-Guaranteed Training Camp Contracts}\label{exhibit-9-one-season-non-guaranteed-training-camp-contracts}}
 
 Player: \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\\
 Team: \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\\
